part 1 of challenge complete

--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "id": "b029e21d",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "61457ca4",
    "metadata": {},
    "outputs": [],
@@ -27,17 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "de501991",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from citipy import citipy"
+    "from citipy import citipy\n",
+    "from pprint import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "id": "c21e186e",
    "metadata": {},
    "outputs": [
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "id": "f5f0d08a",
    "metadata": {},
    "outputs": [],
@@ -74,10 +75,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9e8110e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=7cd5349a8a81351c676e6d427aecd0bb\n"
+     ]
+    }
+   ],
    "source": [
     "#Starting URL for Weather Map API call\n",
     "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\"+weather_api_key\n",
@@ -86,10 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8be1fdb7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=7cd5349a8a81351c676e6d427aecd0bb&q=Boston\n"
+     ]
+    }
+   ],
    "source": [
     "#create an endpoint url for a city\n",
     "city_url = url + \"&q=\" + \"Boston\"\n",
@@ -98,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "id": "8b2df613",
    "metadata": {},
    "outputs": [
@@ -108,7 +125,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "id": "973d5d80",
    "metadata": {},
    "outputs": [
@@ -131,7 +148,7 @@
        "200"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,17 +159,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "bf8d7681",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":802,\"main\":\"Clouds\",\"description\":\"scattered clouds\",\"icon\":\"03n\"}],\"base\":\"stations\",\"main\":{\"temp\":51.6,\"feels_like\":47.91,\"temp_min\":47.44,\"temp_max\":54.05,\"pressure\":1015,\"humidity\":31},\"visibility\":10000,\"wind\":{\"speed\":11.01,\"deg\":13,\"gust\":21},\"clouds\":{\"all\":40},\"dt\":1639778675,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1639742882,\"sunset\":1639775581},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":803,\"main\":\"Clouds\",\"description\":\"broken clouds\",\"icon\":\"04d\"}],\"base\":\"stations\",\"main\":{\"temp\":40.6,\"feels_like\":37.17,\"temp_min\":36.95,\"temp_max\":43.39,\"pressure\":1018,\"humidity\":54},\"visibility\":10000,\"wind\":{\"speed\":5.01,\"deg\":334,\"gust\":11.99},\"clouds\":{\"all\":75},\"dt\":1640103450,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1640088617,\"sunset\":1640121276},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
