--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import pandas as pd\n",
     "import requests\n",
     "import gmaps\n",
+    "import gmaps.datasets\n",
     "\n",
     "# Import API key\n",
     "from config import g_key\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +56,7 @@
        "      <th>City</th>\n",
        "      <th>Country</th>\n",
        "      <th>Max Temp</th>\n",
-       "      <th>Weather Description</th>\n",
+       "      <th>Current Description</th>\n",
        "      <th>Lat</th>\n",
        "      <th>Lng</th>\n",
        "      <th>Hotel Name</th>\n",
@@ -64,80 +65,80 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Warri</td>\n",
-       "      <td>NG</td>\n",
-       "      <td>79.68</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>5.5167</td>\n",
-       "      <td>5.7500</td>\n",
-       "      <td>BON Hotel Delta</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Gualaquiza</td>\n",
+       "      <td>EC</td>\n",
+       "      <td>74.70</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-3.4000</td>\n",
+       "      <td>-78.5500</td>\n",
+       "      <td>Hotel Merceditas</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Saint-Paul</td>\n",
-       "      <td>RE</td>\n",
-       "      <td>78.91</td>\n",
-       "      <td>light rain</td>\n",
-       "      <td>-21.0096</td>\n",
-       "      <td>55.2707</td>\n",
-       "      <td>Boucan Canot</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Ambulu</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>78.71</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-8.3450</td>\n",
+       "      <td>113.6058</td>\n",
+       "      <td>Hotel Ambulu Jember</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>5</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Ambilobe</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>83.28</td>\n",
+       "      <td>light rain</td>\n",
+       "      <td>-13.2000</td>\n",
+       "      <td>49.0500</td>\n",
+       "      <td>Hôtel &amp; Restaurant DIANA Ambilobe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10</td>\n",
        "      <td>Atuona</td>\n",
        "      <td>PF</td>\n",
-       "      <td>78.62</td>\n",
+       "      <td>78.78</td>\n",
        "      <td>overcast clouds</td>\n",
        "      <td>-9.8000</td>\n",
        "      <td>-139.0333</td>\n",
        "      <td>Villa Enata</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Ancud</td>\n",
-       "      <td>CL</td>\n",
-       "      <td>75.22</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>-41.8697</td>\n",
-       "      <td>-73.8203</td>\n",
-       "      <td>Hotel Arena Gruesa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>14</td>\n",
-       "      <td>Wajir</td>\n",
-       "      <td>KE</td>\n",
-       "      <td>79.93</td>\n",
-       "      <td>light rain</td>\n",
-       "      <td>1.7471</td>\n",
-       "      <td>40.0573</td>\n",
-       "      <td>Al-bustan Hotel And Restaurant.</td>\n",
+       "      <td>17</td>\n",
+       "      <td>Avarua</td>\n",
+       "      <td>CK</td>\n",
+       "      <td>75.25</td>\n",
+       "      <td>moderate rain</td>\n",
+       "      <td>-21.2078</td>\n",
+       "      <td>-159.7750</td>\n",
+       "      <td>Paradise Inn</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID        City Country  Max Temp Weather Description      Lat  \\\n",
-       "0        2       Warri      NG     79.68           clear sky   5.5167   \n",
-       "1        4  Saint-Paul      RE     78.91          light rain -21.0096   \n",
-       "2        5      Atuona      PF     78.62     overcast clouds  -9.8000   \n",
-       "3        6       Ancud      CL     75.22           clear sky -41.8697   \n",
-       "4       14       Wajir      KE     79.93          light rain   1.7471   \n",
+       "   City_ID        City Country  Max Temp Current Description      Lat  \\\n",
+       "0        5  Gualaquiza      EC     74.70     overcast clouds  -3.4000   \n",
+       "1        8      Ambulu      ID     78.71     overcast clouds  -8.3450   \n",
+       "2        9    Ambilobe      MG     83.28          light rain -13.2000   \n",
+       "3       10      Atuona      PF     78.78     overcast clouds  -9.8000   \n",
+       "4       17      Avarua      CK     75.25       moderate rain -21.2078   \n",
        "\n",
-       "        Lng                       Hotel Name  \n",
-       "0    5.7500                  BON Hotel Delta  \n",
-       "1   55.2707                     Boucan Canot  \n",
-       "2 -139.0333                      Villa Enata  \n",
-       "3  -73.8203               Hotel Arena Gruesa  \n",
-       "4   40.0573  Al-bustan Hotel And Restaurant.  "
+       "        Lng                         Hotel Name  \n",
+       "0  -78.5500                   Hotel Merceditas  \n",
+       "1  113.6058                Hotel Ambulu Jember  \n",
+       "2   49.0500  Hôtel & Restaurant DIANA Ambilobe  \n",
+       "3 -139.0333                        Villa Enata  \n",
+       "4 -159.7750                       Paradise Inn  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +161,7 @@
     "<dl>\n",
     "<dt>City</dt><dd>{City}</dd>\n",
     "<dt>Country</dt><dd>{Country}</dd>\n",
-    "<dt>Weather Description</dt><dd>{Weather Description}</dd>\n",
+    "<dt>Current Description</dt><dd>{Current Description}</dd>\n",
     "<dt>Max Temp</dt><dd>{Max Temp} °F</dd>\n",
     "</dl>\n",
     "\"\"\"\n",
@@ -173,13 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d453b6a58d4471189e06f8cc7b44e56",
+       "model_id": "ec0c26b0ddb840c6b165d8e011faa406",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +204,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     City_ID    City Country  Max Temp Current Description     Lat      Lng  \\\n",
+      "146      398  Mayuge      UG     76.28     overcast clouds  0.4597  33.4803   \n",
+      "\n",
+      "               Hotel Name  \n",
+      "146  Kagolo Bar and Lodge  \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1 entries, 146 to 146\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column               Non-Null Count  Dtype  \n",
+      "---  ------               --------------  -----  \n",
+      " 0   City_ID              1 non-null      int64  \n",
+      " 1   City                 1 non-null      object \n",
+      " 2   Country              1 non-null      object \n",
+      " 3   Max Temp             1 non-null      float64\n",
+      " 4   Current Description  1 non-null      object \n",
+      " 5   Lat                  1 non-null      float64\n",
+      " 6   Lng                  1 non-null      float64\n",
+      " 7   Hotel Name           1 non-null      object \n",
+      "dtypes: float64(3), int64(1), object(4)\n",
+      "memory usage: 72.0+ bytes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# From the map above pick 4 cities and create a vacation itinerary route to travel between the four cities. \n",
+    "\n",
+    "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
+    "\n",
+    "\n",
+    "# Hint: The starting and ending city should be the same city.\n",
+    "\n",
+    "#vacation_start = vacation_df.loc[(vacation_df[\"City\"] == \"Pirai\")]\n",
+    "\n",
+    "vacation_start = vacation_df.loc[vacation_df[\"City\"]==\"Mayuge\"]\n",
+    "vacation_end = vacation_df.loc[vacation_df[\"City\"]==\"Mayuge\"]\n",
+    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"]==\"Katakwi\"]\n",
+    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"]==\"Kitgum\"]\n",
+    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"]==\"Gulu\"]\n",
+    "print(vacation_start)\n",
+    "vacation_start.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2.7746, 32.299)"
+      ]
+     },
+     "execution_count": 201,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
+    "#start = ((vacation_start[\"Lat\"]).to_numpy(),(vacation_start[\"Lng\"]).to_numpy())\n",
+    "#vacation_start_list = vacation_start.to_numpy()\n",
+    "#vacation_start_list[0][5]\n",
+    "start = (vacation_start.to_numpy()[0][5],vacation_start.to_numpy()[0][6])\n",
+    "end = (vacation_end.to_numpy()[0][5],vacation_end.to_numpy()[0][6])\n",
+    "stop1 = (vacation_stop1.to_numpy()[0][5],vacation_stop1.to_numpy()[0][6])\n",
+    "stop2 = (vacation_stop2.to_numpy()[0][5],vacation_stop2.to_numpy()[0][6])\n",
+    "stop3 = (vacation_stop3.to_numpy()[0][5],vacation_stop3.to_numpy()[0][6])\n",
+    "stop3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9f828ce0a2748d4b8ef275536fb0398",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 7. Create a direction layer map using the start and end latitude-longitude pairs,\n",
+    "# and stop1, stop2, and stop3 as the waypoints. The travel_mode should be \"DRIVING\", \"BICYCLING\", or \"WALKING\".\n",
+    "fig = gmaps.figure()\n",
+    "round_trip = gmaps.directions_layer(start,end,waypoints = [stop1,stop2,stop3],travel_mode = \"DRIVING\")\n",
+    "\n",
+    "fig.add_layer(round_trip)\n",
+    "\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -231,156 +345,149 @@
        "      <th>City</th>\n",
        "      <th>Country</th>\n",
        "      <th>Max Temp</th>\n",
-       "      <th>Weather Description</th>\n",
+       "      <th>Current Description</th>\n",
        "      <th>Lat</th>\n",
        "      <th>Lng</th>\n",
        "      <th>Hotel Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [City_ID, City, Country, Max Temp, Weather Description, Lat, Lng, Hotel Name]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# From the map above pick 4 cities and create a vacation itinerary route to travel between the four cities. \n",
-    "#City 1 is Caete, Minas Gerais, Brazil (near Belo Horizonte)\n",
-    "#City 2 is Guarapari, Espirito Santo (beach town)\n",
-    "#City 3 is Manaus, Amazonas (large city in the north in the Amazon)\n",
-    "#City 4 is Imbituba, Santa Catarina (near Florionopolis and wonderful beaches)\n",
-    "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
-    "\n",
-    "\n",
-    "# Hint: The starting and ending city should be the same city.\n",
-    "\n",
-    "vacation_start = vacation_df.loc[vacation_df[\"City\"]==\"caete\"]\n",
-    "vacation_end = vacation_df.loc[vacation_df[\"City\"]==\"caete\"]\n",
-    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"]==\"guarapari\"]\n",
-    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"]==\"manaus\"]\n",
-    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"]==\"imbituba\"] \n",
-    "vacation_start"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>398</td>\n",
+       "      <td>Mayuge</td>\n",
+       "      <td>UG</td>\n",
+       "      <td>76.28</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>0.4597</td>\n",
+       "      <td>33.4803</td>\n",
+       "      <td>Kagolo Bar and Lodge</td>\n",
        "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>603</td>\n",
+       "      <td>Katakwi</td>\n",
+       "      <td>UG</td>\n",
+       "      <td>84.09</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>1.8911</td>\n",
+       "      <td>33.9661</td>\n",
+       "      <td>Ebenezer Guest House</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>701</td>\n",
+       "      <td>Kitgum</td>\n",
+       "      <td>UG</td>\n",
+       "      <td>87.49</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>3.2783</td>\n",
+       "      <td>32.8867</td>\n",
+       "      <td>Jaflo Gardens Hotel</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>411</td>\n",
+       "      <td>Gulu</td>\n",
+       "      <td>UG</td>\n",
+       "      <td>80.62</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>2.7746</td>\n",
+       "      <td>32.2990</td>\n",
+       "      <td>ACHOLI INN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Lat, Lng]\n",
-       "Index: []"
+       "   City_ID     City Country  Max Temp Current Description     Lat      Lng  \\\n",
+       "0      398   Mayuge      UG     76.28     overcast clouds  0.4597  33.4803   \n",
+       "1      603  Katakwi      UG     84.09     overcast clouds  1.8911  33.9661   \n",
+       "2      701   Kitgum      UG     87.49     overcast clouds  3.2783  32.8867   \n",
+       "3      411     Gulu      UG     80.62     overcast clouds  2.7746  32.2990   \n",
+       "\n",
+       "             Hotel Name  \n",
+       "0  Kagolo Bar and Lodge  \n",
+       "1  Ebenezer Guest House  \n",
+       "2   Jaflo Gardens Hotel  \n",
+       "3            ACHOLI INN  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = (vacation_start[[\"Lat\",\"Lng\"]])\n",
-    "#end = vacation_end[\"Lat\",\"Lng\"]\n",
-    "#stop1 = vacation_stop1[\"Lat\",\"Lng\"]\n",
-    "#stop2 = vacation_stop2[\"Lat\",\"Lng\"]\n",
-    "#stop3 = vacation_stop3[\"Lat\",\"Lng\"]\n",
-    "start"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "# 7. Create a direction layer map using the start and end latitude-longitude pairs,\n",
-    "# and stop1, stop2, and stop3 as the waypoints. The travel_mode should be \"DRIVING\", \"BICYCLING\", or \"WALKING\".\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# 8. To create a marker layer map between the four cities.\n",
     "#  Combine the four city DataFrames into one DataFrame using the concat() function.\n",
-    "itinerary_df = pd.concat([],ignore_index=True)\n",
+    "itinerary_df = pd.concat([vacation_start,vacation_stop1,vacation_stop2,vacation_stop3],ignore_index=True)\n",
     "itinerary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 9 Using the template add city name, the country code, the weather description and maximum temperature for the city. \n",
+    "\n",
     "info_box_template = \"\"\"\n",
-    "\n",
+    "<dl>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Max Temp</dt><dd>{Max Temp} F</dd>\n",
+    "<dt>Current Description</dt><dd>{Current Description}</dd>\n",
+    "</dl>\n",
     "\"\"\"\n",
-    "\n",
     "# 10a Get the data from each row and add it to the formatting template and store the data in a list.\n",
     "hotel_info = [info_box_template.format(**row) for index, row in itinerary_df.iterrows()]\n",
     "\n",
     "# 10b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
-    "locations = itinerary_df[[\"Lat\", \"Lng\"]]"
+    "locations = itinerary_df[[\"Lat\", \"Lng\"]]\n",
+    "marker_layer = gmaps.marker_layer(locations,info_box_content = hotel_info)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 205,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8f30ecfdf29b4cd1bfd13baab2c392e7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 11a. Add a marker layer for each city to the map.\n",
     "\n",
-    "# 11b. Display the figure\n"
+    "fig = gmaps.figure()\n",
+    "\n",
+    "marker_layer = gmaps.marker_layer(locations,info_box_content = hotel_info)\n",
+    "\n",
+    "fig.add_layer(marker_layer)\n",
+    "# 11b. Display the figure\n",
+    "fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
