final edits to project

--- a/Weather_Database/Weather_Database.ipynb
+++ b/Weather_Database/Weather_Database.ipynb
@@ -949,11 +949,11 @@
     "    \n",
     "    \n",
     "    \n",
-    "    #Group cities in sets of 50 for logging purposes\n",
-    "    #if i has no remainder when divided by 50, which means we have completed a set of 50, \n",
+    "    #Group cities in sets of 50 for logging purposes (and for not exceeding api limits)\n",
+    "    #if i has no remainder when divided by 50, which means we have completed a set of 50, (% is the operator for modular arithmetic)\n",
     "    #then increment main counter and increment set counter\n",
     "    #so this if is executed after the 50th, 100th, etc pass, this is when we sleep for a minute\n",
-    "    if (i % 50 == 0 and i >= 50):  # % is the operator for modular arithmetic\n",
+    "    if (i % 50 == 0 and i >= 50): \n",
     "        set_count += 1\n",
     "        record_count = 1\n",
     "        time.sleep(60)\n",
