--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,17 +65,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Gualaquiza</td>\n",
-       "      <td>EC</td>\n",
-       "      <td>74.70</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "      <td>-3.4000</td>\n",
-       "      <td>-78.5500</td>\n",
-       "      <td>Hotel Merceditas</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>8</td>\n",
        "      <td>Ambulu</td>\n",
        "      <td>ID</td>\n",
@@ -86,7 +75,7 @@
        "      <td>Hotel Ambulu Jember</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>9</td>\n",
        "      <td>Ambilobe</td>\n",
        "      <td>MG</td>\n",
@@ -97,7 +86,7 @@
        "      <td>Hôtel &amp; Restaurant DIANA Ambilobe</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>10</td>\n",
        "      <td>Atuona</td>\n",
        "      <td>PF</td>\n",
@@ -108,7 +97,7 @@
        "      <td>Villa Enata</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>17</td>\n",
        "      <td>Avarua</td>\n",
        "      <td>CK</td>\n",
@@ -118,27 +107,38 @@
        "      <td>-159.7750</td>\n",
        "      <td>Paradise Inn</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Rikitea</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>76.68</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-23.1203</td>\n",
+       "      <td>-134.9692</td>\n",
+       "      <td>People ThankYou</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID        City Country  Max Temp Current Description      Lat  \\\n",
-       "0        5  Gualaquiza      EC     74.70     overcast clouds  -3.4000   \n",
-       "1        8      Ambulu      ID     78.71     overcast clouds  -8.3450   \n",
-       "2        9    Ambilobe      MG     83.28          light rain -13.2000   \n",
-       "3       10      Atuona      PF     78.78     overcast clouds  -9.8000   \n",
-       "4       17      Avarua      CK     75.25       moderate rain -21.2078   \n",
+       "   City_ID      City Country  Max Temp Current Description      Lat       Lng  \\\n",
+       "0        8    Ambulu      ID     78.71     overcast clouds  -8.3450  113.6058   \n",
+       "1        9  Ambilobe      MG     83.28          light rain -13.2000   49.0500   \n",
+       "2       10    Atuona      PF     78.78     overcast clouds  -9.8000 -139.0333   \n",
+       "3       17    Avarua      CK     75.25       moderate rain -21.2078 -159.7750   \n",
+       "4       18   Rikitea      PF     76.68     overcast clouds -23.1203 -134.9692   \n",
        "\n",
-       "        Lng                         Hotel Name  \n",
-       "0  -78.5500                   Hotel Merceditas  \n",
-       "1  113.6058                Hotel Ambulu Jember  \n",
-       "2   49.0500  Hôtel & Restaurant DIANA Ambilobe  \n",
-       "3 -139.0333                        Villa Enata  \n",
-       "4 -159.7750                       Paradise Inn  "
+       "                          Hotel Name  \n",
+       "0                Hotel Ambulu Jember  \n",
+       "1  Hôtel & Restaurant DIANA Ambilobe  \n",
+       "2                        Villa Enata  \n",
+       "3                       Paradise Inn  \n",
+       "4                    People ThankYou  "
       ]
      },
-     "execution_count": 185,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,13 +174,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec0c26b0ddb840c6b165d8e011faa406",
+       "model_id": "59270ab1bc6a4f009aa50278c00e9dd1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,12 +212,12 @@
      "output_type": "stream",
      "text": [
       "     City_ID    City Country  Max Temp Current Description     Lat      Lng  \\\n",
-      "146      398  Mayuge      UG     76.28     overcast clouds  0.4597  33.4803   \n",
+      "111      398  Mayuge      UG     76.28     overcast clouds  0.4597  33.4803   \n",
       "\n",
       "               Hotel Name  \n",
-      "146  Kagolo Bar and Lodge  \n",
+      "111  Kagolo Bar and Lodge  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1 entries, 146 to 146\n",
+      "Int64Index: 1 entries, 111 to 111\n",
       "Data columns (total 8 columns):\n",
       " #   Column               Non-Null Count  Dtype  \n",
       "---  ------               --------------  -----  \n",
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -264,16 +264,14 @@
        "(2.7746, 32.299)"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "#start = ((vacation_start[\"Lat\"]).to_numpy(),(vacation_start[\"Lng\"]).to_numpy())\n",
-    "#vacation_start_list = vacation_start.to_numpy()\n",
-    "#vacation_start_list[0][5]\n",
+    "\n",
     "start = (vacation_start.to_numpy()[0][5],vacation_start.to_numpy()[0][6])\n",
     "end = (vacation_end.to_numpy()[0][5],vacation_end.to_numpy()[0][6])\n",
     "stop1 = (vacation_stop1.to_numpy()[0][5],vacation_stop1.to_numpy()[0][6])\n",
@@ -284,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -292,7 +290,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b9f828ce0a2748d4b8ef275536fb0398",
+       "model_id": "6153a87e3b164fd88f4025de09cad99c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +412,7 @@
        "3            ACHOLI INN  "
       ]
      },
-     "execution_count": 203,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,6 +437,7 @@
     "<dt>City</dt><dd>{City}</dd>\n",
     "<dt>Country</dt><dd>{Country}</dd>\n",
     "<dt>Max Temp</dt><dd>{Max Temp} F</dd>\n",
+    "<dt>Hotel Name</dt><dd>{Hotel Name} F</dd>\n",
     "<dt>Current Description</dt><dd>{Current Description}</dd>\n",
     "</dl>\n",
     "\"\"\"\n",
@@ -452,13 +451,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f30ecfdf29b4cd1bfd13baab2c392e7",
+       "model_id": "87ecc559fdf7458b8db197dceb8a9b3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -481,6 +480,13 @@
     "# 11b. Display the figure\n",
     "fig"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
